# AuxCV

./: Cargo.toml  pyproject.toml
.github/workflows/: rust.yml
src/: lib.rs
src/cas/: mod.rs
src/nms/: detect.rs  mod.rs  props.rs
src/postprocess/: mod.rs
src/postprocess/alphapose/: pose.rs
src/postprocess/rtmpose/: mod.rs
src/postprocess/yolov5/: detect.rs
src/postprocess/yolov8/: detect.rs  mod.rs  segment.rs
src/postprocess/yolov8_property/: detect.rs
src/preprocess/: calc_padding.rs  mod.rs
src/preprocess/rtmpose/: float32.rs
src/preprocess/sam/: utils.rs
src/preprocess/std/: float32.rs
src/preprocess/yolov5/: classify.rs  detect.rs  mod.rs
src/preprocess/yolov8/: detect.rs
