[package]
name = "AuxCV"
version = "0.3.6"
edition = "2021"

[lib]
name = "AuxCV"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = { version = "0.23.0" }
half = { version = "2.4", features = ['use-intrinsics'] }
num = "0.4"
rayon = "1.10"
num-traits = { version = "0.2", features = ["default"] }
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut"] }
zeroize = { version = "1.8.1" }