[build-system]
requires = [
    "maturin>=1,<2",
    "cffi>=1.14; platform_python_implementation != 'PyPy'",
    "setuptools!=74.0.0,!=74.1.0,!=74.1.1,!=74.1.2",
]
build-backend = "maturin"
[project]
name = "computing_lib"
version = "0.3.6"
description = "computing_lib"
authors = [{ name = "ywg" }]
requires-python = ">=3.12"
dependencies = []
